--- a/src/components/main/column/footer/addButton/addButton.module.scss
+++ b/src/components/main/column/footer/addButton/addButton.module.scss
@@ -9,9 +9,11 @@
   padding-top: 4px;
   padding-bottom: 4px;
   margin-bottom: 8px;
+  color: #777;
 }
 
-.addButton:active {
+.addButton:hover {
   background-color: #FFFFFF;
   border-color: #FFFFFF;
+  border-radius: 5px;
 }
