--- a/src/components/main/column/footer/cardsDropdown/cardsDropdown.module.scss
+++ b/src/components/main/column/footer/cardsDropdown/cardsDropdown.module.scss
@@ -1,1 +1,11 @@
 .cardsDropdown{}
+
+.select{
+  width: 258px;
+  height: 35px;
+  left: 11px;
+  top: 166px;
+
+  background: #FFFFFF;
+  border-radius: 5px;
+}
