--- a/src/components/main/column/column.module.scss
+++ b/src/components/main/column/column.module.scss
@@ -2,13 +2,31 @@
   display: flex;
   flex-direction: column;
   width: 282px;
+  min-height: 100px;
   border-radius: 10px;
   background-color: #EBECF0;
   font-size: 18px;
+  align-self: start;
+}
+
+.scrollContainer{
+  display: flex;
+  height: 100%;
+  max-height: 500px;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+
+.scrollContainer footer{
+  margin-top: auto;
 }
 
 @media (max-width: 1160px) {
   .column {
    margin: 25px;
   }
+  .column{
+    min-height: 249px;
+  }
 }
+
