--- a/src/components/main/column/footer/input/input.module.scss
+++ b/src/components/main/column/footer/input/input.module.scss
@@ -1,1 +1,9 @@
-.input{}
+.input {
+  border-color: transparent;
+  border-radius: 5px;
+  width: 239px;
+  background-color: #FFFFFF;
+  padding: 7px 9px 7px 8px;
+  border: 0px;
+  margin-bottom: 15px;
+}
