--- a/src/components/taskPage/TaskPage.module.scss
+++ b/src/components/taskPage/TaskPage.module.scss
@@ -2,18 +2,25 @@
   position: relative;
   background-color: #FFFFFF;
   border-radius: 10px;
-  margin: 15px;
-  padding: 15px;
+  margin: 22px 28px 20px 26px;
+  padding: 22px 530px 28px 28px;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .title{
-  padding-bottom: 15px;
+  padding-bottom: 35px;
+  font-size: 24px;
 }
 
 .editor{
   border: none;
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+  height: 100%;
+  width: 100%;
+  resize:none;
 }
 
 .backButton{
@@ -29,4 +36,5 @@
   position: absolute;
   right: 23px;
   top: 17px;
+  height: 24px;
 }
