--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -14,3 +14,11 @@
   padding-right: 19px;
   padding-bottom: 17px;
 }
+
+
+@media (max-width: 1160px) {
+  .footer {
+    display: none;
+  }
+  
+}
