--- a/src/components/main/column/footer/addButton/addButton.module.scss
+++ b/src/components/main/column/footer/addButton/addButton.module.scss
@@ -4,7 +4,6 @@
   border-color: #EBECF0;
   border-style: none;
   font-size: 18px;
-  cursor: pointer;
   width: 102px;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -12,8 +11,9 @@
   color: #777;
 }
 
-.addButton:hover {
+.addButton:hover:not([disabled]) {
   background-color: #FFFFFF;
   border-color: #FFFFFF;
   border-radius: 5px;
+  cursor: pointer;
 }
