--- a/src/components/main/column/footer/addButton/addButton.module.scss
+++ b/src/components/main/column/footer/addButton/addButton.module.scss
@@ -8,7 +8,7 @@
   padding-top: 4px;
   padding-bottom: 4px;
   margin-bottom: 0px;
-  color: #777;
+  color: #5E6C84;
 }
 
 .addButton:hover:not([disabled]) {
